...
            Expanded(child: Center(child: CircularProgressIndicator())),

          if (props.errorMessage != null)
            Expanded(child: Center(child: Text(props.errorMessage!))),

          if (props.musicList.isEmpty && props.isLoading == false)
            Expanded(child: Center(child: Text('No music found'))),

          // List of music
          if (props.musicList.isNotEmpty)
            Expanded(
              child: SingleChildScrollView(
                child: ListView.separated(
...
